--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "app",
   "private": "true",
   "dependencies": {
-    "esbuild": "^0.14.48"
+    "esbuild": "^0.14.48",
+    "sass": "^1.53.0"
   },
   "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets"
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets",
+    "build:css": "sass ./app/assets/stylesheets/application.sass.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
   }
 }
