--- a/config/database.yml
+++ b/config/database.yml
@@ -16,6 +16,5 @@ test:
 
 production:
   <<: *default
+  host: controllers_db
   database: app_production
-  username: app
-  password: <%= ENV["APP_DATABASE_PASSWORD"] %>
