--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -33,6 +33,7 @@ ENV RAILS_SERVE_STATIC_FILES=1
 ENV RAILS_LOG_TO_STDOUT=1
 
 VOLUME /opt/rails
+VOLUME /opt/rails/public
 
 HEALTHCHECK --interval=10s --timeout=3s --start-period=30s --retries=3 CMD wget -qO /dev/null http://localhost:3000/ping || exit 1
 
