--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets",
     "build:css": "sass ./app/assets/stylesheets/application.sass.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
+  },
+  "devDependencies": {
+    "vite": "^3.2.0",
+    "vite-plugin-ruby": "^3.1.2"
   }
 }
