--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "dependencies": {
     "esbuild": "^0.14.48",
     "normalize.css": "^8.0.1",
-    "sass": "^1.53.0"
+    "sass": "^1.53.0",
+    "vite": "^3.2.0",
+    "vite-plugin-ruby": "^3.1.2"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets",
     "build:css": "sass ./app/assets/stylesheets/application.sass.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
-  },
-  "devDependencies": {
-    "vite": "^3.2.0",
-    "vite-plugin-ruby": "^3.1.2"
   }
 }
