--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -11,10 +11,13 @@ RUN apk add --update --no-cache \
       git \
       tzdata \
       gcompat \
-      libssl1.1
+      libssl1.1 \
+      nginx
 
 RUN mkdir -p /opt/rails
 WORKDIR /opt/rails
+
+COPY nginx.conf /etc/nginx/nginx.conf
 
 COPY Gemfile Gemfile.lock ./
 RUN bundle config set without 'development test' && bundle install
@@ -34,4 +37,4 @@ ENV RAILS_LOG_TO_STDOUT=1
 
 HEALTHCHECK --interval=10s --timeout=3s --start-period=30s --retries=3 CMD wget -qO /dev/null http://localhost:3000/ping || exit 1
 
-CMD ["rails", "s", "-b0"]
+CMD ["foreman", "start"]
