--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -11,13 +11,10 @@ RUN apk add --update --no-cache \
       git \
       tzdata \
       gcompat \
-      libssl1.1 \
-      nginx
+      libssl1.1
 
 RUN mkdir -p /opt/rails
 WORKDIR /opt/rails
-
-COPY nginx.conf /etc/nginx/nginx.conf
 
 COPY Gemfile Gemfile.lock ./
 RUN bundle config set without 'development test' && bundle install
@@ -37,4 +34,4 @@ ENV RAILS_LOG_TO_STDOUT=1
 
 HEALTHCHECK --interval=10s --timeout=3s --start-period=30s --retries=3 CMD wget -qO /dev/null http://localhost:3000/ping || exit 1
 
-CMD ["foreman", "start"]
+CMD ["rails", "s", "-b0"]
