--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "app",
   "private": "true",
   "dependencies": {
+    "@types/react": "^18.0.26",
     "esbuild": "^0.14.48",
     "normalize.css": "^8.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-select": "^5.7.0",
+    "react-sortable-hoc": "^2.0.0",
     "sass": "^1.53.0",
     "vite": "^3.2.0",
     "vite-plugin-ruby": "^3.1.2"
