--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "dependencies": {
     "@types/react": "^18.0.26",
     "esbuild": "^0.14.48",
+    "mapbox-gl": "^2.11.1",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-autocomplete": "^2.7.1",
+    "react-map-gl": "^7.0.20",
     "react-select": "^5.7.0",
     "react-sortable-hoc": "^2.0.0",
     "sass": "^1.53.0",
     "vite": "^3.2.0",
-    "vite-plugin-ruby": "^3.1.2"
+    "vite-plugin-ruby": "^3.1.2",
+    "vite-plugin-svgr": "^2.4.0"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets",
