--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "app",
   "private": "true",
   "dependencies": {
+    "@dnd-kit/core": "^6.0.6",
+    "@dnd-kit/sortable": "^7.0.1",
     "@types/react": "^18.0.26",
     "classnames": "^2.3.2",
     "esbuild": "^0.14.48",
