--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,6 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-
       - name: Check out repository
         uses: actions/checkout@v2
 
@@ -52,9 +51,9 @@ jobs:
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.CLOUDY_IP }}
-          username: jeremy
+          username: jmarquis
           key: ${{ secrets.GH_RSA }}
-          script: docker run --network=controllers -e RAILS_ENV=production -v /opt/secrets/controllers.key:/opt/rails/config/master.key:ro -v /opt/secrets/controllers-production.key:/opt/rails/config/credentials/production.key:ro jmarquis/controllers:$REV rails db:migrate
+          script: docker run -e RAILS_ENV=production -v /opt/secrets/controllers.key:/opt/rails/config/master.key:ro -v /opt/secrets/controllers-production.key:/opt/rails/config/credentials/production.key:ro jmarquis/controllers:$REV rails db:migrate
           envs: REV
 
       - name: Deploy image
@@ -65,4 +64,3 @@ jobs:
           key: ${{ secrets.GH_RSA }}
           script: docker service update --force --image jmarquis/controllers:$REV controllers
           envs: REV
-
