--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,7 @@ jobs:
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.CLOUDY_IP }}
-          username: jeremy
+          username: jmarquis
           key: ${{ secrets.GH_RSA }}
           script: docker pull jmarquis/controllers:$REV
           envs: REV
@@ -60,7 +60,7 @@ jobs:
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.CLOUDY_IP }}
-          username: jeremy
+          username: jmarquis
           key: ${{ secrets.GH_RSA }}
           script: docker service update --force --image jmarquis/controllers:$REV controllers
           envs: REV
