--- a/config/database.yml
+++ b/config/database.yml
@@ -16,5 +16,7 @@ test:
 
 production:
   <<: *default
-  host: controllers_db
+  host: <%= Rails.application.credentials.dig(:database, :host) %>
+  username: <%= Rails.application.credentials.dig(:database, :username) %>
+  password: <%= Rails.application.credentials.dig(:database, :password) %>
   database: app_production
