--- a/config/database.yml
+++ b/config/database.yml
@@ -20,4 +20,4 @@ production:
   port: <%= Rails.application.credentials.dig(:database, :port) %>
   username: <%= Rails.application.credentials.dig(:database, :username) %>
   password: <%= Rails.application.credentials.dig(:database, :password) %>
-  database: app_production
+  database: <%= Rails.application.credentials.dig(:database, :db_name) %>
