--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-sortable-hoc": "^2.0.0",
     "sass": "^1.53.0",
     "vite": "^4.0.0",
+    "vite-plugin-full-reload": "^1.0.5",
     "vite-plugin-ruby": "^3.1.2",
     "vite-plugin-svgr": "^2.4.0"
   },
