--- a/test/fixtures/modders.yml
+++ b/test/fixtures/modders.yml
@@ -15,6 +15,7 @@
 #  status           :string           not null
 #  twitter_username :string
 #  uuid             :string
+#  vetting_status   :string
 #  website_url      :string
 #  created_at       :datetime         not null
 #  updated_at       :datetime         not null
@@ -22,9 +23,10 @@
 #
 # Indexes
 #
-#  index_modders_on_name     (name) USING gin
-#  index_modders_on_slug     (slug) UNIQUE
-#  index_modders_on_user_id  (user_id)
+#  index_modders_on_name            (name) USING gin
+#  index_modders_on_slug            (slug) UNIQUE
+#  index_modders_on_user_id         (user_id)
+#  index_modders_on_vetting_status  (vetting_status)
 #
 
 one:
