--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/react": "^18.0.26",
     "classnames": "^2.3.2",
     "esbuild": "^0.14.48",
+    "js-cookie": "^3.0.1",
     "mapbox-gl": "^2.11.1",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
