compendium sidebar redesign

--- a/app/lib/compendium-menu.yml
+++ b/app/lib/compendium-menu.yml
@@ -57,6 +57,6 @@ Triggers:
 
 separator-2:
 
-Related sites & resources: links
-
+Mod index: mods
 Glossary: glossary
+Related sites & resources: links
