jump to modder wip

--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "dev": "vite --host",
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=assets",
     "build:css": "sass ./app/assets/stylesheets/application.sass.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.2"
   }
 }
