--- a/Dockerfile.heroku
+++ b/Dockerfile.heroku
@@ -3,6 +3,7 @@ FROM ruby:3.1.3-alpine
 ARG RAILS_ENV=production
 
 RUN apk add --update --no-cache \
+      curl \
       build-base \
       less \
       nodejs\
